[NARFEX-3] Fix Token Landing on iphone

--- a/src/token_landing/containers/Contacts/Contacts.less
+++ b/src/token_landing/containers/Contacts/Contacts.less
@@ -35,6 +35,8 @@
     @media screen and (min-width: @mobile-width) and (max-width: 1024px) {
       width: 40%;
     }
+
+
   }
 
   &__link {
@@ -42,6 +44,12 @@
 
     &-telegram {
       margin-top: auto;
+
+      .Button {
+        display: flex;
+        height: auto;
+        padding: 30px 35px;
+      }
     }
   }
 }
@@ -88,5 +96,9 @@
     &__image {
       height: 226px;
     }
+
+    &__container {
+      padding: 42px 15px;
+    }    
   }
 }
